<resources>
    <string name="app_name" translatable="false">Albeli</string>
    <string name="default_notification_channel_id">albeli</string>
    <string name="default_notification_channel_name">Albeli</string>
    <string name="default_web_client_id">1026309959873-foid08c7cgqtioq8j8c1a7741suhouk6.apps.googleusercontent.com</string>
    <string name="google_maps_key" translatable="false">AIzaSyDDOWUo-4BVRwrbtkE2kPVz7USJCZqlwd4</string>
    <string name="font_family_medium" translatable="false">sans-serif-medium</string>
    <string name="font_family_regular" translatable="false">sans-serif</string>
    <string name="desc_order" translatable="false">DESC</string>
    <string name="error_bad_request_400">The request could not be understood by the server due to malformed syntax.</string>
    <string name="error_unauthorized_401">The request requires user authentication. The response MUST include a WWW-Authenticate header field.</string>
    <string name="error_forbidden_403">The server understood the request but is refusing to fulfill it.</string>
    <string name="error_not_found_404">The server has not found anything matching the Request-URI.</string>
    <string name="error_method_not_allowed_405">The method specified in the Request-Line is not allowed for the resource identified by the Request-URI.</string>
    <string name="error_request_timeout_408">Your request timed out. Please retry the request.</string>
    <string name="error_request_entity_too_large_413">The server is refusing to process a request because the request entity is larger than the server is willing or able to process.</string>
    <string name="error_request_uri_too_long_414">The server is refusing to service the request because the Request-URI is longer than the server is willing to interpret.</string>
    <string name="error_internal_server_error_500">The server encountered an unexpected condition which prevented it from fulfilling the request.</string>
    <string name="error_unknown">An unknown error occurred</string>
    <string name="msg_unauthorized">We are signing you out as we found your account access from another device</string>
    <string name="lbl_search">Search</string>
    <string name="photos">Photos</string>
    <string name="camera">Camera</string>
    <string name="select_photos">Select Photos</string>
    <string name="msg_no_application_found">No Application available to view pdf</string>
    <string name="sort_by">Sort By</string>
    <string name="sort_by_name_ascending">Name A to Z</string>
    <string name="sort_by_name_descending">Name Z to A</string>
    <string name="sort_by_price_low_to_high">Price Low to High</string>
    <string name="sort_by_price_high_to_low">Price High to Low</string>
    <string name="sort_by_date_modified">Date Modified</string>
    <string name="title_sign_up_screen1">Signup free and start\nusing OTM System</string>
    <string name="title_sign_up_screen2">Upload your photo so that your team\nmate can recognize you</string>
    <string name="only_text_digits" translatable="false">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_middle_name">Middle Name</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_email_optional">Email (Optional)</string>
    <string name="ripple_duration" translatable="false">100</string>
    <string name="lbl_upload_photo">Upload Photo</string>
    <string name="hint_upload_user_image">Preferred Image Size: Square</string>
    <string name="btn_register">Register</string>
    <string name="note_verify_phone_number_otp">Enter the four-digit code that you were sent over mobile SMS.</string>
    <string name="click_on">Click On</string>
    <string name="resend">Resend</string>
    <string name="note_verify_phone_number_resend">If you do not receive after 2 minutes</string>
    <string name="log_in">Log In</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account_orders">Account/Orders</string>
    <string name="action_continue">Continue</string>
    <string name="add_new_address">+Add New Address</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="address">Address</string>
    <string name="alert_check_gps">Geolocation is OFF</string>
    <string name="alert_message_error">Something went wrong please try after sometime.</string>
    <string name="alert_network_error">Network error! Try after sometime.</string>
    <string name="alert_no_connection">No internet connection</string>
    <string name="alert_no_data_message">No data available to show.</string>
    <string name="alert_please_login_first">Please login first.</string>
    <string name="alert_press_back_again_to_exit">Press back again to exit.</string>
    <string name="alert_some_error">Something went wrong, try again</string>
    <string name="alert_something_wrong">Something went wrong, please try after sometime</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apply">Apply</string>
    <string name="apply_voucher">Apply voucher</string>
    <string name="back">BACK</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="cancel">Cancel</string>
    <string name="cart">Cart</string>
    <string name="change_password">Change Password</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="com.crashlytics.android.build_id">4d0b8b9c-db7a-4715-9db4-d4d2bee2784f</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b&gt;facebook.com/device&lt;/b&gt; and enter the code shown above.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading…</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_continue">Continue with Facebook</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_smart_device_instructions">To connect your account, open the Facebook app on your mobile device and check for notifications.</string>
    <string name="com_facebook_smart_device_instructions_or">- OR -</string>
    <string name="com_facebook_smart_login_confirmation_cancel">Not you?</string>
    <string name="com_facebook_smart_login_confirmation_continue_as">Continue as %1$s</string>
    <string name="com_facebook_smart_login_confirmation_title">Confirm Login</string>
    <string name="com_facebook_tooltip_default">You\'re in control - choose what info you want to share with apps.</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="forgot_password_">Forgot Password ?</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_confirm">Confirm Password</string>
    <string name="hint_user_firstname">First name</string>
    <string name="hint_user_lastname">Last name</string>
    <string name="login_with_facebook">Login with facebook</string>
    <string name="logout">Logout</string>
    <string name="my_notification_list">My Notification List</string>
    <string name="my_orders">My Orders</string>
    <string name="my_profile">My Profile</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="no_data_found">No data found.</string>
    <string name="or">OR</string>
    <string name="reviews">Reviews</string>
    <string name="setting">Settings</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="skip_for_now">Skip for now</string>
    <string name="submit_review">Submit Review</string>
    <string name="terms_condition">By creating your account, you agree to our Terms &amp; Conditions</string>
    <string name="loading_more">Loading more&#8230;</string>
</resources>