<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/size_12dp"
            android:paddingBottom="@dimen/size_12dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgBack"
                android:layout_width="@dimen/size_30dp"
                android:layout_height="@dimen/size_30dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/size_12dp"
                android:padding="@dimen/size_8dp"
                app:srcCompat="@drawable/ic_back"
                app:tint="@color/colorBlack" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtSignIn"
                style="@style/TextStyleNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/size_20dp"
                android:fontFamily="@string/font_family_medium"
                android:text="@string/sign_in"
                android:textColor="@color/colorGreen"
                android:textSize="@dimen/text_size_16sp" />
        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/size_20dp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextStyleLarge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_10dp"
                    android:text="Sign Up"
                    android:textColor="@color/colorPrimaryText"
                    android:textStyle="bold"
                    android:visibility="visible" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextStyleNormal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_4dp"
                    android:text="Sign up to continue"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/text_size_15sp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtFirstName"
                    style="@style/Edittext_Login"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/size_30dp"
                    android:background="@drawable/bg_edittext"
                    android:drawableStart="@drawable/ic_email"
                    android:gravity="center_vertical"
                    android:hint="@string/hint_user_firstname"
                    android:inputType="text" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtLastName"
                    style="@style/Edittext_Login"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/size_16dp"
                    android:background="@drawable/bg_edittext"
                    android:drawableStart="@drawable/ic_email"
                    android:gravity="center_vertical"
                    android:hint="@string/hint_user_lastname"
                    android:inputType="text" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtEmail"
                    style="@style/Edittext_Login"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/size_16dp"
                    android:background="@drawable/bg_edittext"
                    android:drawableStart="@drawable/ic_email"
                    android:gravity="center_vertical"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtPassword"
                    style="@style/Edittext_Login"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/size_16dp"
                    android:background="@drawable/bg_edittext"
                    android:drawableStart="@drawable/ic_lock"
                    android:gravity="center_vertical"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtPasswordConfirm"
                    style="@style/Edittext_Login"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/size_16dp"
                    android:background="@drawable/bg_edittext"
                    android:drawableStart="@drawable/ic_lock"
                    android:gravity="center_vertical"
                    android:hint="@string/hint_password_confirm"
                    android:inputType="textPassword" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtSignUp"
                    style="@style/Button_Signup"
                    android:layout_marginTop="@dimen/size_26dp"
                    android:gravity="center"
                    android:text="@string/sign_up" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvFB"
                    style="@style/Button_Signup"
                    android:layout_marginTop="@dimen/size_16dp"
                    android:background="@drawable/bg_social_media"
                    android:drawableStart="@drawable/ic_fb"
                    android:gravity="center"
                    android:paddingStart="@dimen/size_20dp"
                    android:paddingEnd="0dp"
                    android:text="@string/login_with_facebook"
                    android:textColor="@color/colorBlack"
                    android:visibility="gone" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvTerms"
                    style="@style/TextStyleSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_30dp"
                    android:gravity="center"
                    android:paddingStart="@dimen/size_26dp"
                    android:paddingEnd="@dimen/size_26dp"
                    android:text="@string/terms_condition"
                    android:textColor="@color/colorBlack" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </ScrollView>
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>