<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/routToolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:elevation="@dimen/max_elevation"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/routBack"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:gravity="center_vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imgBack"
                    android:layout_width="@dimen/size_30dp"
                    android:layout_height="@dimen/size_30dp"
                    android:layout_marginStart="@dimen/size_8dp"
                    android:padding="@dimen/size_8dp"
                    app:srcCompat="@drawable/ic_back"
                    app:tint="@color/colorBlack" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/size_4dp"
                    android:fontFamily="@string/font_family_medium"
                    android:includeFontPadding="false"
                    android:text="@string/reviews"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/text_size_17sp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/routSubmitReview"
            android:layout_below="@id/routToolbar"
            android:layout_marginStart="@dimen/size_4dp"
            android:layout_marginTop="@dimen/size_9dp"
            android:layout_marginEnd="@dimen/size_4dp"
            android:layout_marginBottom="@dimen/size_6dp"
            android:background="@color/colorWhite">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvReviewList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/loadMore"
                android:visibility="visible" />

            <TextView
                android:id="@+id/txtEmptyPlaceHolder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/no_data_found"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/text_size_14sp"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/loadMore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/size_16dp"
                android:paddingTop="@dimen/size_8dp"
                android:paddingEnd="0dp"
                android:paddingBottom="@dimen/size_8dp"
                android:visibility="gone">

                <ProgressBar
                    style="?android:attr/progressBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/size_6dp"
                    android:padding="@dimen/size_3dp"
                    android:text="@string/loading_more"
                    android:textColor="@color/colorPrimaryText" />
            </LinearLayout>
            
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/routSubmitReview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSubmitReview"
                style="@style/Style_tvActionButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@string/font_family_regular"
                android:text="@string/submit_review"
                android:textSize="@dimen/text_size_15sp"
                android:visibility="visible" />

        </RelativeLayout>

        <include
            android:id="@+id/progressBarView"
            layout="@layout/layout_progressbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/routToolbar" />

    </RelativeLayout>

</layout>
